fix(header-title): added overflow:hidden

--- a/tegel/src/components/header/webcomponent/header-title/header-title.scss
+++ b/tegel/src/components/header/webcomponent/header-title/header-title.scss
@@ -9,6 +9,7 @@
   font-family: var(--sdds-font-family-headline);
   letter-spacing: normal;
   position: relative;
+  overflow: hidden;
 
   .component {
     // FIXME this doesnt work
